--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -113,7 +113,7 @@
           <div class="dropdown-menu" aria-labelledby="cultureDropdown">
             <a class="dropdown-item" href="/architecture">Architecture</a>
             <a class="dropdown-item" href="/festivals">Festivals</a>
-            <a class="dropdown-item" href="page3.html">Media</a>
+            <a class="dropdown-item" href="/media">Media</a>
             <!-- More dropdown items -->
           </div>
       </li>
@@ -134,7 +134,7 @@
 <div class="container mt-4">
   <div class="text-white">
     {% if user.is_authenticated %}
-    <h1>{{greeting}} {{user.first_name}}</h1><br>
+    <h1 style="text-shadow: 0px 0px 12px rgb(0, 0, 0);">{{greeting}}, {{user.first_name}}</h1><br>
     {% endif %}
   </div>
   
@@ -234,7 +234,7 @@
             
             <h2 class="card-title city-title" style="color: white; font-weight: bold; margin-top: 10px; font-family: Arial, Helvetica, sans-serif; text-shadow: 3px 3px #000000;">{{city}}</h2>
             <div style="position: absolute; top: 10%; right: 10%;">
-              <img src="{{image}}" alt="Weather Icon" style="width: 120%; border-radius: 15px; box-shadow: inset 0 0 10px 0px rgb(28, 185, 224); border: 1px solid black;">
+              <img src="{{image}}" alt="Weather Icon" style="width: 120%; border-radius: 15px; box-shadow: inset 0 0 10px 0px rgb(0, 0, 0); border: 1px solid black;">
             </div>
             <h3 id="localTime" class="card-text" style="margin-top: 15%">{{current_date}}</h3>
             <h4 id="liveTime"></h4>
